// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NGLComponent Should match existing snapshot when canvas isn't available. 1`] = `
<div
  id="NGLComponent"
  style={
    Object {
      "padding": 0,
    }
  }
>
  <div
    style={
      Object {
        "height": 400,
        "width": 400,
      }
    }
  />
  <div
    className="row"
  >
    <button
      className="ui button"
      onClick={[Function]}
      role="button"
    >
      Remove Locked Residues
    </button>
  </div>
</div>
`;

exports[`NGLComponent Should match existing snapshot when given sample data 1`] = `
<NGLComponentClass
  addCandidateResidues={[Function]}
  addHoveredResidues={[Function]}
  addLockedResiduePair={[Function]}
  candidateResidues={Array []}
  clearAllResidues={[Function]}
  data={
    Object {
      "residueStore": Object {
        "resno": Array [
          0,
          1,
          2,
          3,
          4,
        ],
      },
    }
  }
  height={400}
  hoveredResidues={Array []}
  lockedResiduePairs={Object {}}
  padding={0}
  removeAllLockedResiduePairs={[Function]}
  removeCandidateResidues={[Function]}
  removeHoveredResidues={[Function]}
  removeLockedResiduePair={[Function]}
  width={400}
>
  <div
    id="NGLComponent"
    style={
      Object {
        "padding": 0,
      }
    }
  >
    <div
      style={
        Object {
          "height": 400,
          "width": 400,
        }
      }
    />
    <GridRow>
      <div
        className="row"
      >
        <Button
          as="button"
          onClick={[Function]}
          role="button"
        >
          <button
            className="ui button"
            onClick={[Function]}
            role="button"
          >
            Remove Locked Residues
          </button>
        </Button>
      </div>
    </GridRow>
  </div>
</NGLComponentClass>
`;
